--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/bun": "latest",
     "cheerio": "^1.0.0",
     "domutils": "^3.2.2",
+    "extract-urls": "^1.4.1",
     "htmlparser2": "^10.0.0",
     "tab": "^1.0.0"
   },
@@ -14,9 +15,11 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "axios-cache-interceptor": "^1.6.2",
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
     "iconv-lite": "^0.6.3",
-    "node-html-parser": "^7.0.1"
+    "node-html-parser": "^7.0.1",
+    "p-queue": "^8.1.0"
   }
 }
