--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios-cache-interceptor": "^1.6.2",
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
+    "fastest-levenshtein": "^1.0.16",
     "iconv-lite": "^0.6.3",
     "node-html-parser": "^7.0.1",
     "p-queue": "^8.1.0"
