--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "wahlen",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest",
-    "cheerio": "^1.0.0",
-    "cycletls": "^1.0.27",
-    "domutils": "^3.2.2",
-    "extract-urls": "^1.4.1",
-    "htmlparser2": "^10.0.0",
-    "tab": "^1.0.0"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "axios": "^1.7.9",
-    "axios-cache-interceptor": "^1.6.2",
-    "csv-parse": "^5.6.0",
-    "csv-parser": "^3.2.0",
-    "fastest-levenshtein": "^1.0.16",
-    "iconv-lite": "^0.6.3",
-    "node-html-parser": "^7.0.1",
-    "p-queue": "^8.1.0"
-  }
+	"name": "wahlen",
+	"module": "index.ts",
+	"type": "module",
+	"devDependencies": {
+		"@turf/turf": "^7.2.0",
+		"@types/bun": "latest",
+		"cheerio": "^1.0.0",
+		"cycletls": "^1.0.27",
+		"domutils": "^3.2.2",
+		"extract-urls": "^1.4.1",
+		"htmlparser2": "^10.0.0",
+		"tab": "^1.0.0"
+	},
+	"dependencies": {
+		"axios": "^1.7.9",
+		"axios-cache-interceptor": "^1.6.2",
+		"csv-parse": "^5.6.0",
+		"csv-parser": "^3.2.0",
+		"fastest-levenshtein": "^1.0.16",
+		"iconv-lite": "^0.6.3",
+		"node-html-parser": "^7.0.1",
+		"p-queue": "^8.1.0",
+		"typescript": "^5.8.2"
+	}
 }
