--- a/package.json
+++ b/package.json
@@ -10,17 +10,41 @@
 		"domutils": "^3.2.2",
 		"extract-urls": "^1.4.1",
 		"htmlparser2": "^10.0.0",
-		"tab": "^1.0.0"
+		"tab": "^1.0.0",
+		"typescript": "^5",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@tailwindcss/postcss": "^4",
+		"tailwindcss": "^4"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-slot": "^1.1.2",
 		"axios": "^1.7.9",
 		"axios-cache-interceptor": "^1.6.2",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"csv-parse": "^5.6.0",
 		"csv-parser": "^3.2.0",
 		"fastest-levenshtein": "^1.0.16",
 		"iconv-lite": "^0.6.3",
+		"lucide-react": "^0.485.0",
+		"next": "15.2.4",
 		"node-html-parser": "^7.0.1",
 		"p-queue": "^8.1.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.0.2",
+		"trie-search": "^2.2.0",
+		"tw-animate-css": "^1.2.5",
 		"typescript": "^5.8.2"
+	},
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
 	}
 }
