--- a/package.json
+++ b/package.json
@@ -3,24 +3,28 @@
 	"module": "index.ts",
 	"type": "module",
 	"devDependencies": {
+		"@tailwindcss/postcss": "^4",
 		"@turf/turf": "^7.2.0",
 		"@types/bun": "latest",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@types/shpjs": "^3.4.7",
 		"cheerio": "^1.0.0",
 		"cycletls": "^1.0.27",
 		"domutils": "^3.2.2",
 		"extract-urls": "^1.4.1",
 		"htmlparser2": "^10.0.0",
 		"tab": "^1.0.0",
-		"typescript": "^5",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"@tailwindcss/postcss": "^4",
-		"tailwindcss": "^4"
+		"tailwindcss": "^4",
+		"typescript": "^5.8.2"
 	},
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.1.6",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-radio-group": "^1.2.3",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@turf/simplify": "^7.2.0",
 		"axios": "^1.7.9",
 		"axios-cache-interceptor": "^1.6.2",
 		"class-variance-authority": "^0.7.1",
@@ -31,15 +35,19 @@
 		"fastest-levenshtein": "^1.0.16",
 		"iconv-lite": "^0.6.3",
 		"lucide-react": "^0.485.0",
+		"maplibre-gl": "5.2",
 		"next": "15.2.4",
 		"node-html-parser": "^7.0.1",
 		"p-queue": "^8.1.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"shpjs": "^6.1.0",
 		"tailwind-merge": "^3.0.2",
+		"tailwind-variants": "^1.0.0",
+		"tileserver-gl": "^5.2.0",
+		"topojson-server": "^3.0.1",
 		"trie-search": "^2.2.0",
-		"tw-animate-css": "^1.2.5",
-		"typescript": "^5.8.2"
+		"tw-animate-css": "^1.2.5"
 	},
 	"scripts": {
 		"dev": "next dev --turbopack",
