--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
             - "8008:3000"
         environment:
             NODE_ENV: production
+            HOST: https://bundestagswahl_map.samuelscheit.com
         depends_on:
             - map
 
