--- a/.dockerignore
+++ b/.dockerignore
@@ -9,7 +9,9 @@
 !wahlbezirke/data/wahlbezirkeList.json
 !wahlbezirke/data/gemeinden.csv
 !src/**/*
-!map/GemeindenShapefile.zip
-!map/germany_place.mbtiles
+!map/data/GemeindenShapefile.zip
+!map/data/germany_place.mbtiles
+!map/data/plz.csv
+!map/data/plz.zip
 !map/*.ts
 !map/config.json
