--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
 		"domutils": "^3.2.2",
 		"extract-urls": "^1.4.1",
 		"htmlparser2": "^10.0.0",
+		"puppeteer-extra": "^3.3.6",
+		"puppeteer-extra-plugin-stealth": "^2.11.2",
+		"rebrowser-puppeteer-core": "^23.10.3",
 		"tab": "^1.0.0",
 		"tailwindcss": "^4",
+		"tileserver-gl-light": "^5.2.0",
 		"typescript": "^5.8.2"
 	},
 	"dependencies": {
@@ -27,6 +31,7 @@
 		"@turf/simplify": "^7.2.0",
 		"axios": "^1.7.9",
 		"axios-cache-interceptor": "^1.6.2",
+		"axios-cookiejar-support": "^5.0.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -34,6 +39,7 @@
 		"csv-parser": "^3.2.0",
 		"fastest-levenshtein": "^1.0.16",
 		"iconv-lite": "^0.6.3",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.485.0",
 		"maplibre-gl": "5.2",
 		"next": "15.2.4",
@@ -45,6 +51,8 @@
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^1.0.0",
 		"topojson-server": "^3.0.1",
+		"tough-cookie": "^5.1.2",
+		"tough-cookie-file-store": "^2.0.3",
 		"trie-search": "^2.2.0",
 		"tw-animate-css": "^1.2.5"
 	},
@@ -52,6 +60,7 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"map": "cd map && tileserver-gl-light --config config.json"
 	}
 }
